--- a/src/Components/EditorParagraph/style.css
+++ b/src/Components/EditorParagraph/style.css
@@ -1,11 +1,32 @@
 .editor-paragraph {
-    margin: 0;
-    outline: none;
-    width: 100%;
+  margin: 10px 0;
+  padding-left: 15px;
+  outline: none;
+  width: 100%;
 
-    border-bottom: 1px solid rgba(0, 0, 0, 0.356);
+  border-block: 1px solid rgba(0, 0, 0, 0.11);
+  white-space: pre;
 }
 
 .editor-paragraph:nth-child(2n) {
-background-color: rgba(0, 0, 0, 0.137);
+  background-color: rgba(0, 0, 0, 0.137);
+}
+
+.part--unknown {
+  background: repeating-linear-gradient(
+    45deg,
+    #706e00,
+    #706e00 15px,
+    #2b2300 15px,
+    #362d00 30px
+  );
+  color: rgb(255, 206, 236);
+  font-weight: 900;
+}
+
+.part--verse {
+}
+
+.part--chorus {
+  padding-left: 2rem;
 }
