--- a/src/Components/SongEditor/style.css
+++ b/src/Components/SongEditor/style.css
@@ -3,5 +3,8 @@
     border-radius: 5px;
 
     width: 100%;
-    height: 100%;
+
+    display: grid;
+    grid-template-columns: 1fr 8rem;
+    gap: .5rem
 }
